2007-04-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	whoops :)

2007-04-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/pixmaps/Makefile.am:
	* pitivi/pixmaps/busy.gif:
	* pitivi/sourcelist.py:
	* pitivi/ui/sourcefactories.py:
	Remove buttons in source list.
	The actions present in the toolbar and menu are enough, plus the fact
	that you can drop some files in it too.
	Add an indicator in the source list when importing is taking place.
	Much slicker than previous versions.
	Fixes #432714

2007-04-30  Edward Hervey  <edward@fluendo.com>

	* pitivi.desktop.in:
	Add bugzilla fields so that bug-buddy can work properly with pitivi.

2007-04-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timeline.py:
	Only hide the timeline if it's empty.
	* pitivi/ui/timelineobjects.py:
	Remove unused code.

2007-04-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/encodingdialog.glade:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	Terminology fixes.

2007-04-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Thibaut Girka <thibaut.girka@free.fr>
	* pitivi/ui/mainwindow.py:
	Fix i18n bug.
	Disable/enable [Render] button at correct time.
	Fixes #432204

2007-04-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Jeff Fortin <nekohayo@gmail.com>
	* pitivi/ui/mainwindow.py:
	Make fullscreen action toggle-able (like other gtk/gnome apps).
	Remove 5px spacing in Global VBox that made the toolbar look weird.
	* pitivi/ui/sourcefactories.py:
	Add icons to popup-menu.
	Fixes #415060

2007-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	Remove cruft that was causing the explanation message to be hidden.
	Fixes #432656
	* pitivi/ui/timeline.py:
	Start by displaying the timeline. Fix explanation message.
	Only display explanation message in the timeline once there's at least
	one clip to add. Fixes #432724
	
