@@ -1,3 +1,8 @@
+2007-05-01  Edward Hervey  <edward@fluendo.com>
+
+	* tests/test_timeline_composition.py:
+	Remove dangling whitespaces.
+
 2007-04-30  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/ui/exportsettingswidget.py:
